@@ -385,6 +385,23 @@ class Smarty extends Smarty_Internal_TemplateBase {
     public $config_read_hidden = false;
 
     /**#@-*/
+    
+    /**#@+
+    * resource locking
+    */
+    
+    /**
+     * Controls whether cache resources should emply locking mechanism
+     * @var boolean
+     */
+    public $locking = false;
+    /**
+     * seconds to wait for acquiring a lock before ignoring the write lock
+     * @var float
+     */
+    public $locking_timeout = 10;
+    
+    /**#@-*/
 
     /**
     * global template functions
